X-editable changelog
=============================


Version 1.4.0 wip
----------------------------
[enh] added `destroy` method, see #61 (vitalets) 
[enh] textarea: added `rows` property (vitalets) 
[enh #60] added wysihtml5 input (vitalets) 
[enh] added IOS-style clear button for text inputs (vitalets) 
[enh] date inputs changed in inline mode (vitalets) 
[enh #51] popup/inline modes can be toggled via `mode` config option. No more *-inline.js versions of files (vitalets)
[enh] update bootstrap-datepicker to upstream (vitalets)
[enh] 'display' method: added param 'response' allowing to show text directly from server (vitalets)
[enh] new util method `$.fn.editableutils.itemsByValue` to easily get selected items for sourced-inputs (vitalets)
[enh] convert newlines to <br> in error message for more pretty display (vitalets)
[enh #57] remove css height for textarea (vitalets) 
[enh] if new value for select is 'null' source should not load (vitalets) 
[enh #53] 'name' no more appended to source defined as url (vitalets) 
[enh #46] move 'img' dir outside 'css' (vitalets) 
[enh #48] fix handling of newlines in textarea input (jmfontaine) 
[enh #47] set select source to function (brianchance) 
[bug] fix inline container move on next line in IE7 (vitalets) 


Version 1.3.0 Dec 10, 2012
----------------------------  
[enh] added html5 inputs support: password, email, url, tel, number, range (vitalets) 
[bug #43] fix for bootstrap 2.2.2 (vitalets) 
[enh #41] 'abstract' class renamed to 'abstractinput' as abstract is reserved word (vitalets)
[enh #40] 'params' option defined as function overwrites original ajax data instead of appending (vitalets)
[bug] datepicker: error when click on arrows after clear date (vitalets) 
[enh] 'hidden' event: added possible value of reason param - 'nochange'. Occurs when form is submitted but value was not changed (vitalets) 
[enh] 'submit' method changed: error-callback's parameter simplified (vitalets) 